--- a/index.html
+++ b/index.html
@@ -1,2 +1,139 @@
 <!DOCTYPE html>
-<header></header>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Студия</title>
+  </head>
+  <body>
+    <header>
+      <a href="/"> WebStudio </a>
+      <nav>
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tell:+380961111111">+38 096 111 11 11</a>
+    </header>
+    <main>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h2>Внимание к деталям</h2>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h2>Пунктуальность</h2>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h2>Планирование</h2>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h2>Современные технологии</h2>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="images\img1.jpg"
+                alt="руки на клавиатуре и экран планшета с кодом"
+                width="370"
+            /></a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="images\img 1-2.jpg"
+                alt="рука с телефоном и экран ноутбука с изображением телефонов"
+                width="370"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="images\img 1-3.jpg"
+                alt="планшет с палитрой цветов на экране"
+                width="370"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="images\img2-1.jpg"
+              alt="улыбающийся мужчина в рубашке с бородой и в очках"
+              width="270"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="images\img 2-2.jpg"
+              alt="улыбающаяся девушка с белыми волосами в очках"
+              width="270"
+            />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="images\img 2-3.jpg"
+              alt="улыбающийся мужчина в рубашке смотрит в сторону"
+              width="270"
+            />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images\img2-4.jpg"
+              alt="брюнет в футболке и очках с ухмылкой"
+              width="270"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="/">WebStudio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <a href="info@example.com">info@example.com</a>
+      <a href="tell:+380961111111">+38 096 111 11 11</a>
+    </footer>
+  </body>
+</html>
