--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li>
             <a href="">
               <img
-                src="images\img 1-2.jpg"
+                src="images\img2.jpg"
                 alt="рука с телефоном и экран ноутбука с изображением телефонов"
                 width="370"
               />
@@ -79,7 +79,7 @@
           <li>
             <a href="">
               <img
-                src="images\img 1-3.jpg"
+                src="images\img3.jpg"
                 alt="планшет с палитрой цветов на экране"
                 width="370"
               />
@@ -92,7 +92,7 @@
         <ul>
           <li>
             <img
-              src="images\img2-1.jpg"
+              src="images\img4.jpg"
               alt="улыбающийся мужчина в рубашке с бородой и в очках"
               width="270"
             />
@@ -101,7 +101,7 @@
           </li>
           <li>
             <img
-              src="images\img 2-2.jpg"
+              src="images\img5.jpg"
               alt="улыбающаяся девушка с белыми волосами в очках"
               width="270"
             />
@@ -110,7 +110,7 @@
           </li>
           <li>
             <img
-              src="images\img 2-3.jpg"
+              src="images\img6.jpg"
               alt="улыбающийся мужчина в рубашке смотрит в сторону"
               width="270"
             />
@@ -119,7 +119,7 @@
           </li>
           <li>
             <img
-              src="images\img2-4.jpg"
+              src="images\img7.jpg"
               alt="брюнет в футболке и очках с ухмылкой"
               width="270"
             />
