--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tell:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
@@ -25,30 +27,31 @@
         <button type="button">Заказать услугу</button>
       </section>
       <section>
+        <h2>Наши приимущества</h2>
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -60,30 +63,25 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href="">
-              <img
-                src="images\img1.jpg"
-                alt="руки на клавиатуре и экран планшета с кодом"
-                width="370"
-            /></a>
+            <img
+              src="images\img1.jpg"
+              alt="руки на клавиатуре и экран планшета с кодом"
+              width="370"
+            />
           </li>
           <li>
-            <a href="">
-              <img
-                src="images\img2.jpg"
-                alt="рука с телефоном и экран ноутбука с изображением телефонов"
-                width="370"
-              />
-            </a>
+            <img
+              src="images\img2.jpg"
+              alt="рука с телефоном и экран ноутбука с изображением телефонов"
+              width="370"
+            />
           </li>
           <li>
-            <a href="">
-              <img
-                src="images\img3.jpg"
-                alt="планшет с палитрой цветов на экране"
-                width="370"
-              />
-            </a>
+            <img
+              src="images\img3.jpg"
+              alt="планшет с палитрой цветов на экране"
+              width="370"
+            />
           </li>
         </ul>
       </section>
@@ -132,8 +130,10 @@
     <footer>
       <a href="/">WebStudio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="info@example.com">info@example.com</a>
-      <a href="tell:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="info@example.com">info@example.com</a></li>
+        <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </footer>
   </body>
 </html>
