--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
         <ul>
           <li>
             <img
-              src="images\img1.jpg"
+              src="images/img1.jpg"
               alt="руки на клавиатуре и экран планшета с кодом"
               width="370"
             />
           </li>
           <li>
             <img
-              src="images\img2.jpg"
+              src="images/img2.jpg"
               alt="рука с телефоном и экран ноутбука с изображением телефонов"
               width="370"
             />
           </li>
           <li>
             <img
-              src="images\img3.jpg"
+              src="images/img3.jpg"
               alt="планшет с палитрой цветов на экране"
               width="370"
             />
@@ -90,7 +90,7 @@
         <ul>
           <li>
             <img
-              src="images\img4.jpg"
+              src="images/img4.jpg"
               alt="улыбающийся мужчина в рубашке с бородой и в очках"
               width="270"
             />
@@ -99,7 +99,7 @@
           </li>
           <li>
             <img
-              src="images\img5.jpg"
+              src="images/img5.jpg"
               alt="улыбающаяся девушка с белыми волосами в очках"
               width="270"
             />
@@ -108,7 +108,7 @@
           </li>
           <li>
             <img
-              src="images\img6.jpg"
+              src="images/img6.jpg"
               alt="улыбающийся мужчина в рубашке смотрит в сторону"
               width="270"
             />
@@ -117,7 +117,7 @@
           </li>
           <li>
             <img
-              src="images\img7.jpg"
+              src="images/img7.jpg"
               alt="брюнет в футболке и очках с ухмылкой"
               width="270"
             />
